Self/playorg/Unpackaged/Config/objects/Assessment__c.object
<CustomObject>
    <description>ASSESSMENT - Stores basic assessment info</description>
    <fields>
        <fullName>AccountPerson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account Person Relationship
Delete Me</description>
        <label>AccountPerson</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assessments</relationshipLabel>
        <relationshipName>Assessment_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>A field to track and manage approval status for assessments.</description>
        <inlineHelpText>A field to track and manage approval status for assessments.</inlineHelpText>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned for Corrections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assessment_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>The official date for this assessment.</description>
        <inlineHelpText>The official date for this assessment.</inlineHelpText>
        <label>Assessment Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessment_Type__c</fullName>
        <label>Assessment Type</label>
        <picklist>
            <picklistValues>
                <fullName>CANS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>A field to allow users to record descriptive information about the given assessment, including exception case details and brief thoughts/concerns.</description>
        <inlineHelpText>A field to allow users to record descriptive information about the given assessment, including exception case details and brief thoughts/concerns.</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Interval__c</fullName>
        <description>Interval for the assessment</description>
        <label>Interval</label>
        <picklist>
            <picklistValues>
                <fullName>Intake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discharge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A field to control whether or not an assessment has been submitted and locked, unlocked, etc.</description>
        <inlineHelpText>A field to control whether or not an assessment has been submitted and locked, unlocked, etc.</inlineHelpText>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overall_Score__c</fullName>
        <description>Calculated Score of the assessment</description>
        <label>Overall Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <description>Indication of the numbered quarter this assessment describes.</description>
        <inlineHelpText>Indication of the numbered quarter this assessment describes.</inlineHelpText>
        <label>Quarter</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Locked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-opened</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Selected when Assessment is complete</description>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TFC_Family_Vistas__c</fullName>
        <label>TFC/Family Vistas</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Assessment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AccountPerson__c</columns>
        <columns>Interval__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Assessment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessments</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>AssessmentQuarterValidation</fullName>
        <active>true</active>
        <description>A rule to make sure that if user selects &quot;quarterly&quot; in interval picklist that they are forced to enter a quarter number in field.</description>
        <errorConditionFormula>ISPICKVAL( Interval__c , &apos;Quarterly&apos;) &amp;&amp;  ISBLANK( Quarter__c )</errorConditionFormula>
        <errorDisplayField>Quarter__c</errorDisplayField>
        <errorMessage>Quarter is required when &quot;Quarterly&quot; is selected from the Interval picklist.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IntervalRequired</fullName>
        <active>true</active>
        <description>A rule to require selection of an interval for each new assessment.</description>
        <errorConditionFormula>ISPICKVAL(  Interval__c , &apos;&apos;)</errorConditionFormula>
        <errorMessage>You must select an Interval value to create a new assessment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TFC_Family_Vistas_Selection_Required</fullName>
        <active>true</active>
        <description>A validation rule that requires a selection be made from the TFC/Family Vistas picklist</description>
        <errorConditionFormula>NOT(OR(ISPICKVAL( TFC_Family_Vistas__c , &apos;Yes&apos;) ,ISPICKVAL( TFC_Family_Vistas__c , &apos;No&apos;) ))</errorConditionFormula>
        <errorDisplayField>TFC_Family_Vistas__c</errorDisplayField>
        <errorMessage>A value must be selected for &quot;&quot;TFC / Family Vistas&quot;&quot; when completing an assessment.</errorMessage>
    </validationRules>
</CustomObject>